<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Mr.Keep</string>
    <string name="action_settings">设置</string>
    <string name="click_me">单击我</string>
    <string name="site_name">名称</string>
    <string name="user_name">登录名</string>
    <string name="word_value">密码</string>
    <string name="remark">备注</string>
    <string name="go_add">添加 +</string>
    <string name="go_back">返回</string>
    
    <string name="add">添加</string>
    <string name="update">编辑</string>
    <string name="delete">删除</string>
    <string name="save">保存</string>
    <string name="reg">注册</string>
    
    <string name="what_updated">
        0.1.5.0\n增加新版本检查功能
        \n\n0.1.4.6\n代码移至GIT管理
        \n\n0.1.4.5\n代码结构优化
        \n\n0.1.4.4\n1.精简代码\n2.Menu模块顺序调整\n3.关闭更新（检测）功能
        \n\n0.1.4.3\n修正其中一个服务器挂机导致程序异常的问题
        \n\n0.1.4.0\n支持双线检测功能
        \n\n0.1.3.0\n1.增加自动检测更新功能\n2.增加对一览数据检索的功能
        \n\n0.1.2.4\n修复某些手机无法更改登陆密码的问题
        \n\n0.1.2.0\n1.增加登陆时需要密码功能\n2.增加修改登陆密码功能
        \n\n0.1.1.4\n调整列表的显示顺序
        \n\n0.1.1.2\n1.修正某些情况下无法生成备份文件的问题\n2.对备份文件加密
        \n\n0.1.1.0\n1.增加列表数据的导入导出功能\n2.增加批量导入账户密码功能
        \n\n0.1.0.3\n1.问题修正\n2.更新部分提示语
        \n\n0.1.0.0\n正式版release</string>
    <string name="partners">\@石头大风吹</string>
    <string name="about_keep">
        Keep，
        \n就是一个密码保险箱，
        \n无论你的密码再多再复杂，
        \n她都能安全地为您储存起来，
        \n只需记住一组能打开它的密码，
        \n即可高枕无忧。
        \n\n问题反馈可访问以下地址
        \nYaiba.net</string>
    
    
    <string name="main_title">Mr.Keep</string>
    <string name="add_a_record">添加记录</string>
    <string name="edit_a_record">正在编辑</string>
    <string name="detail_a_record">记录详情</string>
    <string name="data_management">备份与恢复</string>
    <string name="login_p_change">修改登录密码</string>
    
    <string name="input_login_password">Keep密码保管箱</string>
    <string name="set_login_old_password">当前密码</string>
    <string name="set_login_new_password">新密码</string>
    <string name="set_login_new_password2">再次确认</string>
    <string name="set_login_password">初始密码</string>
    <string name="set_login_password2">再次确认</string>
    
    <string name="login_mess">登录</string>
    <string name="record_list_search">查找&#8230;</string>
    
    <string name="data_bakup">数据备份</string>
    <string name="data_bakup_description">数据将以加密的形式存储在您的设备中。</string>
    <string name="data_recover">数据恢复</string>
    <string name="data_recover_description">程序会读取指定目录中的备份文件。</string>
    <string name="data_mess_import">批量导入</string>
    <string name="data_mess_import_description">本程序支持自定义xml文件批量导入账户及密码信息，免去初期手工录入的繁琐。</string>
    
    
	<string name="dialog_update_title">更新</string>
	<string name="dialog_update_msg">发现新版本，版本号：</string>
	<string name="dialog_update_msg2">，是否立即更新？更新前请确认已经备份重要数据。</string>
	<string name="dialog_update_btnupdate">更新</string>
	<string name="dialog_update_btnnext">下次再说</string>
	<string name="dialog_downloading_msg">正在下载更新。。。</string>
	<string name="dialog_alert_title">警告</string>
	<string name="dialog_downfailed_btndown">重新下载</string>
	<string name="dialog_downfailed_btnnext">以后再说</string>
	<string name="dialog_error_title">错误</string>
	<string name="dialog_downfailed_msg">下载更新失败，是否重试？</string>
	
	<string name="update_already_latest">已经是最新版本</string>
	<string name="update_new_seg1">发现新版本，版本号：</string>
	<string name="update_new_seg2">\n正在下载更新</string>
	<string name="update_new_seg3">\n正在下载更新</string>
	<string name="update_error">更新出错</string>    
	
	<string name="menu_inport_export">备份与恢复</string>
	<string name="menu_change_login_password">修改登录密码</string>
	<string name="menu_whatupdate">更新说明</string>
	<string name="menu_checkupdate">检查更新</string>
	<string name="menu_support">技术支持</string>
	<string name="menu_about">关于Keep</string>
	


</resources>
