<?xml version="1.0" encoding="utf-8" ?>  
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"  
                                        android:orientation="vertical" 
                                        android:layout_width="fill_parent" 
                                        android:layout_height="fill_parent">  

      <EditText
          android:id="@+id/site_name"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/site_name"
          android:ems="10" />
      
      <EditText
          android:id="@+id/user_name"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/user_name"
          android:ems="10" />
      
      <EditText
          android:id="@+id/word_value"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/word_value"
          android:ems="10" />
      
      <EditText
          android:id="@+id/remark"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/remark"
          android:ems="10" />
      
      
   <TextView android:id="@+id/show"  
                    android:layout_width="fill_parent"  
                     android:layout_height="wrap_content"
                      android:text="" />

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:paddingRight="10dp" >

       <Button
           android:id="@+id/add"
           style="?android:attr/buttonBarButtonStyle"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/add" />

       <Button
           android:id="@+id/update"
           style="?android:attr/buttonBarButtonStyle"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/update" />

       <Button
           android:id="@+id/delete"
           style="?android:attr/buttonBarButtonStyle"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/delete" />
   </LinearLayout>
  
  <ListView android:id="@+id/recordslist"
			android:layout_width="fill_parent"
			android:layout_height="50dp"
			android:textSize="20sp" 
			android:minHeight="50dp"
			android:paddingTop="10dp"  
			android:paddingLeft="10dp"
	        android:paddingBottom="10dp" />

  </LinearLayout>
  
