<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

  
   <FrameLayout 
    android:layout_width="fill_parent"
    android:layout_height="50dp" >

        <Button
           android:id="@+id/reg"
           android:layout_gravity="right|center_vertical"
	       android:layout_width="40dp"
	       android:layout_height="40dp"
		   android:layout_marginRight="10dp"
	       android:background="@drawable/reg_01"
            />
    </FrameLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="128dp" >
            <ImageView
            android:id="@+id/index_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/app_name"
            android:src="@drawable/index_logo" />
    
    </FrameLayout>
    
    
    <EditText
        android:id="@+id/password"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:hint="@string/set_login_password"
        android:inputType="numberPassword"
        android:paddingTop="10dp"
        android:textSize="22sp" />

    <EditText
        android:id="@+id/password2"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:hint="@string/set_login_password2"
        android:inputType="numberPassword"
        android:paddingTop="10dp"
        android:textSize="22sp" />
    
    
    
    
    
    

</LinearLayout>